# atui

./: .gitignore  Cargo.toml  README.md  go.mod
cmd/: main.go
internal/debug/: log.go
pkg/model/: prompt.go
pkg/ui/: prompt.go
src/: action.rs  app.rs  input.rs  main.rs
src/aws/: mod.rs  resources.rs
src/aws/ec2/: mod.rs  vpc.rs
