[package]
name = "atui"
version = "0.1.0"
authors = ["clover0"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.15", features = ["crossterm"], default-features = false }
crossterm = "0.23"
lazy_static = "1.4.0"
