[package]
name = "atui"
version = "0.1.0"
authors = ["clover0"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.15", features = ["crossterm"], default-features = false }
crossterm = "0.23"
lazy_static = "1.4.0"
aws-config = "0.9.0"
aws-sdk-dynamodb = "0.9.0"
aws-sdk-ec2 = "0.9.0"
tokio = { version = "1.17", features = ["full"] }
futures = "0.3"
structopt = "0.3"
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
